--- a/public/plugin/element-ui/package.json
+++ b/public/plugin/element-ui/package.json
@@ -2,19 +2,19 @@
   "_args": [
     [
       {
-        "raw": "element-ui@^1.2.7",
+        "raw": "element-ui",
         "scope": null,
         "escapedName": "element-ui",
         "name": "element-ui",
-        "rawSpec": "^1.2.7",
-        "spec": ">=1.2.7 <2.0.0",
-        "type": "range"
+        "rawSpec": "",
+        "spec": "latest",
+        "type": "tag"
       },
-      "/Users/ttsy/yubian"
+      "/Users/ttsy/theroc"
     ]
   ],
   "_cnpm_publish_time": 1497793473967,
-  "_from": "element-ui@>=1.2.7 <2.0.0",
+  "_from": "element-ui@latest",
   "_hasShrinkwrap": false,
   "_id": "element-ui@1.3.7",
   "_inCache": true,
@@ -31,22 +31,22 @@
   "_npmVersion": "4.2.0",
   "_phantomChildren": {},
   "_requested": {
-    "raw": "element-ui@^1.2.7",
+    "raw": "element-ui",
     "scope": null,
     "escapedName": "element-ui",
     "name": "element-ui",
-    "rawSpec": "^1.2.7",
-    "spec": ">=1.2.7 <2.0.0",
-    "type": "range"
+    "rawSpec": "",
+    "spec": "latest",
+    "type": "tag"
   },
   "_requiredBy": [
-    "/"
+    "#USER"
   ],
   "_resolved": "https://registry.npm.taobao.org/element-ui/download/element-ui-1.3.7.tgz",
   "_shasum": "ed6e2e371b767fd7b8a8015dc284e4af5e940026",
   "_shrinkwrap": null,
-  "_spec": "element-ui@^1.2.7",
-  "_where": "/Users/ttsy/yubian",
+  "_spec": "element-ui",
+  "_where": "/Users/ttsy/theroc",
   "bugs": {
     "url": "https://github.com/ElemeFE/element/issues"
   },
